bug 452217 nsLocalFileWin should return errors consistent with other platforms, r=neil, sr=bsmedberg